<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:text="@string/categories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp" />

    <ImageButton
            android:contentDescription="more"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_more_foreground"
            android:id="@+id/moreBtn"
            android:backgroundTint="@color/background"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/moreTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryText"
            android:textSize="18sp"
            android:text="@string/see_more"
            app:layout_constraintEnd_toStartOf="@id/moreBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/categoryComposeViewMainScreen"
            android:layout_marginTop="8dp"

            />

    <androidx.compose.ui.platform.ComposeView
            android:id="@+id/categoryComposeViewMainScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryTv"
            android:layout_margin="8dp" />

    <TextView
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryComposeViewMainScreen"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            android:text="@string/meals"
            android:id="@+id/mealsTv" />

    <androidx.compose.ui.platform.ComposeView
            android:id="@+id/mealsComposeView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mealsTv"
            app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>